# Autonomous_Driving_Master_Project

./: README.md  agent_description.json  setup_env.sh  start.sh
01-01-control-exercise/freicar_control/: CMakeLists.txt  package.xml
01-01-control-exercise/freicar_control/data/: final.txt
01-01-control-exercise/freicar_control/launch/: start_controller.launch
01-01-control-exercise/freicar_control/scripts/: pub_path.py  record_path.py  save_path.py
01-01-control-exercise/freicar_control/src/controller/: controller.cpp  controller.h  pure_pursuit.cpp
02-01-object-detection-exercise/freicar_object_detection/: CMakeLists.txt  package.xml
02-01-object-detection-exercise/freicar_object_detection/launch/: bounding_box.launch
02-01-object-detection-exercise/freicar_object_detection/src/: README.md  evaluate.py  inference.py  requirements.txt  rospubsub.py  train.py
02-01-object-detection-exercise/freicar_object_detection/src/dataloader/: freicar_dataloader.py
02-01-object-detection-exercise/freicar_object_detection/src/model/efficientdet/: backbone.py
02-02-semantic-segmentation-exercise/: evaluation_L1.txt  evaluation_miou.txt  lane_center_pub.py  train_segmentation.py  train_segmentation_all_miou.py  training_L1.txt  training_miou.txt
02-02-semantic-segmentation-exercise/dataset_helper/: birdseye_demo.py  freicar_segreg_dataloader.py  run_freicar_segreg_dataloader.py
02-02-semantic-segmentation-exercise/logs_15/: evaluation_L1.txt  evaluation_miou.txt  plot.py  training_L1.txt  training_miou.txt
02-02-semantic-segmentation-exercise/logs_5/: evaluation_L1.txt  evaluation_miou.txt  evaluation_miou_background.txt  evaluation_miou_car.txt  evaluation_miou_junction.txt  evaluation_miou_road.txt  plot_all_miou.py  training_L1.txt  training_miou.txt  training_miou_background.txt  training_miou_car.txt  training_miou_junction.txt  training_miou_road.txt
02-02-semantic-segmentation-exercise/model/: fast_scnn_model.py
03-01-localization-exercise/freicar_localization/: CMakeLists.txt  README.md
03-01-localization-exercise/freicar_localization/launch/: evaluate.launch  localization.launch
03-01-localization-exercise/freicar_localization/logs/: output.txt  plot.py
03-01-localization-exercise/freicar_localization/scripts/: lane_center_bev.py
03-01-localization-exercise/freicar_localization/src/: particle_filter.cpp  particle_filter.h  quaternion_average.h  ros_pf_localization.cpp  ros_pf_localization.h  sensor_model.cpp  sensor_model.h
freicar_joy/: CMakeLists.txt  package.xml
freicar_joy/src/: main.cpp
freicar_launch/: CMakeLists.txt  package.xml
freicar_launch/bash/: start_sim.sh
freicar_launch/launch/: all.launch  all3.launch  local_comp_launch.launch  sim_base.launch
freicar_launch/spawn_positions/: freicar_1_spawn.yaml  freicar_2_spawn.yaml  freicar_competition_1_spawn.yaml  freicar_competition_2_spawn.yaml
freicar_map/: CMakeLists.txt
freicar_map/maps/: freicar_competition_1.aismap  freicar_competition_2.aismap
freicar_map/src/: main.cpp
freicar_overtake/: CMakeLists.txt  package.xml
freicar_overtake/launch/: depth.launch
freicar_overtake/src/: depth_nodereal.py  depth_nodereal_sign_goback.py
freicar_planner/: CMakeLists.txt  package.xml
freicar_planner/launch/: planning.launch
freicar_planner/src/: save_path.py
freicar_sign_detect/: CMakeLists.txt  package.xml
freicar_sign_detect/include/: freicar_sign_detect_node.h
freicar_sign_detect/msg/: Sign.msg  Signs.msg
freicar_sign_detect/src/: freicar_sign_detect_node.cpp
raiscar_msgs/: CMakeLists.txt  package.xml
raiscar_msgs/msg/: BatteryCalibration.msg  BatteryReport.msg  ControlCommand.msg  ControlReport.msg  ControllerPath.msg  PowerReport.msg  Raiscar_ultra_sensor.msg
