<?xml version="1.0"?>
<package format="2">
  <name>freicar_sign_detect</name>
  <version>0.0.0</version>
  <description>The freicar_sign_detect package</description>

  <maintainer email="vertensj@todo.todo">vertensj</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>freicar_common</depend>

</package>
